--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "description": "The testings for Konnect releases",
   "main": "",
   "scripts": {
-    "start": "jest"
+    "start": "jest",
+    "start:mac": "dotenv -e .env.mac -- npx jest",
+    "start:win": "dotenv -e .env.win -- npx jest"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "dotenv-cli": "^8.0.0",
     "jest": "^29.7.0",
     "jest-environment-puppeteer": "^11.0.0",
     "jest-puppeteer": "^11.0.0",
     "puppeteer-core": "^24.9.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.5.0"
   }
 }
